objects/DRAsset__c.object
<CustomObject>
    <description>Asset Dataraptor Interface Object</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivationDate__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActivationName__c</fullName>
        <label>Activation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Datetime__c</fullName>
        <label>Activation Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetLevel__c</fullName>
        <label>Asset Level</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetModel__c</fullName>
        <label>Asset Model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetName__c</fullName>
        <label>Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetProvidedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Provided By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DRAssets (Asset Provided By)</relationshipLabel>
        <relationshipName>DRAssets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssetReferenceId__c</fullName>
        <label>Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetServicedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Serviced By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DRAssets (Asset Serviced By)</relationshipLabel>
        <relationshipName>DRAssets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Brand__c</fullName>
        <label>Asset Brand</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DRAssets (Billing Account)</relationshipLabel>
        <relationshipName>DRAssets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BlacklistRemoveDate__c</fullName>
        <label>Blacklist Remove Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blacklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blacklist de Suscripciones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BundleStatus__c</fullName>
        <label>Bundle Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoSistemaOrigen__c</fullName>
        <label>Codigo Sistema Origen</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectDate__c</fullName>
        <label>Connect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrencyPaymentMode__c</fullName>
        <label>Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRBundleName__c</fullName>
        <label>DRBundleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRError__c</fullName>
        <label>DRError</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRProgressData__c</fullName>
        <label>DRProgressData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRStatus__c</fullName>
        <label>DRStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisconnectDate__c</fullName>
        <label>Disconnect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EffectiveOneTimeLoyaltyTotal__c</fullName>
        <label>Effective One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EffectiveQuantity__c</fullName>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ID_Sistema_Origen__c</fullName>
        <label>ID Sistema Origen</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imei__c</fullName>
        <label>Imei</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InCartQuantityMap__c</fullName>
        <label>InCartQuantityMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InstallDate__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvalidGuarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Garantía inválida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InventoryItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Item</label>
        <referenceTo>vlocity_cmt__InventoryItem__c</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCompetitorProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemName__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSONAttribute__c</fullName>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRAssets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Product_Family__c</fullName>
        <formula>TEXT( Product2__r.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Linked Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSISDN__c</fullName>
        <label>MSISDN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Status__c</fullName>
        <label>Network Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_Sistema_Origen__c</fullName>
        <label>Nombre Sistema Origen</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time_Calculated_Price__c</fullName>
        <label>One Time Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Charge__c</fullName>
        <label>One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Price__c</fullName>
        <label>One Time Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Loyalty_Price__c</fullName>
        <label>One Time Loyalty Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_Loyalty_Total__c</fullName>
        <label>One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_Manual_Discount__c</fullName>
        <label>One Time Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>One_Time_Total__c</fullName>
        <label>One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentItemId__c</fullName>
        <label>ParentItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricebookEntryId__c</fullName>
        <label>PricebookEntryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Log__c</fullName>
        <label>Pricing Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductAttribXN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductAttribXN</label>
        <referenceTo>vlocity_cmt__ProductAttribXN__c</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Maintenance/Service Fees</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>One Time Charge</fullName>
                </value>
                <value>
                    <fullName>One Time Discount</fullName>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Service Plan</fullName>
                </value>
                <value>
                    <fullName>Simcard</fullName>
                </value>
                <value>
                    <fullName>Movil</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Hierarchy_Path__c</fullName>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Object_Type__c</fullName>
        <formula>Product2__r.vlocity_cmt__ObjectTypeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_Status__c</fullName>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseDate__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Calculated_Price__c</fullName>
        <label>Recurring Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Charge__c</fullName>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Discount_Price__c</fullName>
        <label>Recurring Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Manual_Discount__c</fullName>
        <label>Recurring Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recurring_Total__c</fullName>
        <label>Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_UOM__c</fullName>
        <label>Recurring UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RootAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>DRAssets (Root Asset)</relationshipLabel>
        <relationshipName>DRAssets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RootItemId__c</fullName>
        <label>RootItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>DRAssets</relationshipLabel>
        <relationshipName>DRAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DRAssets (Service Account)</relationshipLabel>
        <relationshipName>DRAssets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sistema_Origen__c</fullName>
        <label>Sistema Origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>Infotainment</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>In Activation</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StockKeepingUnit__c</fullName>
        <label>Product SKU</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTipo_de_Producto__c</fullName>
        <formula>TEXT( Product2__r.vlocity_cmt__SubType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubTipo de Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Siniestro</fullName>
                </value>
                <value>
                    <fullName>Fraude</fullName>
                </value>
                <value>
                    <fullName>Port-out</fullName>
                </value>
                <value>
                    <fullName>Mora</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por mora</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por fraude</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida voluntariamente</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por siniestro</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por Dorma</fullName>
                </value>
                <value>
                    <fullName>Suspend-Siniestro</fullName>
                </value>
                <value>
                    <fullName>Suspend-Fraude</fullName>
                </value>
                <value>
                    <fullName>Suspend-Voluntaria</fullName>
                </value>
                <value>
                    <fullName>Mora-Parcial</fullName>
                </value>
                <value>
                    <fullName>Mora-Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <label>Subscription Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspend_Date_Time__c</fullName>
        <label>Suspend Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tangible__c</fullName>
        <formula>Product2__r.Tangible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tangible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Producto__c</fullName>
        <formula>TEXT( Product2__r.vlocity_cmt__Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Destruccion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Destrucción Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsageEndDate__c</fullName>
        <label>Usage End Date</label>
        <type>Date</type>
    </fields>
    <label>DRAsset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DRAsset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DRAssets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>